# angular8-bazel

./: .bazelrc  README.md  angular.json  angular.json.bak  package-lock.json  package.json
.github/workflows/: azure-static-web-apps-polite-bush-049f54200.yml
src/: BUILD.bazel  main.ts
src/app/: app-routing.module.ts  app.component.html  app.module.ts
src/app/Module000000/: Module000000.module.ts
src/app/Module000001/: Module000001.module.ts
src/app/Module000002/: Module000002.module.ts
src/app/Module000003/: Module000003.module.ts
src/app/Module000004/: Module000004.module.ts
src/app/Module000005/: Module000005.module.ts
src/app/Module000006/: Module000006.module.ts
src/app/Module000007/: Module000007.module.ts
src/app/Module000008/: Module000008.module.ts
src/app/Module000009/: Module000009.module.ts
src/app/Module000010/: Module000010.module.ts
src/app/Module000011/: Module000011.module.ts
src/app/Module000012/: Module000012.module.ts
src/app/Module000013/: Module000013.module.ts
src/app/Module000014/: Module000014.module.ts
src/app/Module000015/: Module000015.module.ts
src/app/Module000016/: Module000016.module.ts
src/app/Module000017/: Module000017.module.ts
src/app/Module000018/: Module000018.module.ts
src/app/Module000019/: Module000019.module.ts
src/app/Module000020/: Module000020.module.ts
src/app/Module000021/: Module000021.module.ts
src/app/Module000022/: Module000022.module.ts
src/app/Module000023/: Module000023.module.ts
src/app/Module000024/: Module000024.module.ts
src/app/Module000025/: Module000025.module.ts
src/app/Module000026/: Module000026.module.ts
src/assets/images/: BUILD.bazel
(+175 files in other folders)
